feat(impl):[TRI-1402] code smells issues in Sonar - use Stream.toList()